# device-sdk

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: CODEOWNERS
.github/workflows/: test.yml
examples/: prepare-workspace.ps1
examples/c/: .gitignore  CMakeLists.txt  example.c
examples/python/: c2d.py  config_tutorial.py  messages.py  provisioning.py  spotflow_cloud.py  twins.py
spotflow/: CHANGELOG.md  Cargo.toml  README-CRATE.md  build.rs  cliff.toml  db_init.sql  sqlx-data.json
spotflow-c/: CHANGELOG.md  Cargo.toml  build.rs  cbindgen.toml  pack.ps1  publish.ps1
spotflow-c/packaging/: get_started.c
spotflow-c/src/: dps.rs  error.rs  lib.rs  marshall.rs
spotflow-c/src/ingress/: c2d.rs  mod.rs  twins.rs
spotflow-py/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
spotflow-py/src/: dps.rs  lib.rs
spotflow-py/src/ingress/: c2d.rs  mod.rs  twins.rs
spotflow/examples/: ingress.rs  reconnect.rs  twins.rs
spotflow/examples/common/: mod.rs  platform_caller.rs
spotflow/src/: lib.rs
spotflow/src/cloud/: api_core.rs  dps.rs  drs.rs  duration_wrapper.rs  mod.rs
spotflow/src/connection/: mod.rs  twins.rs
spotflow/src/ingress/: base.rs  builder.rs  c2d.rs  mod.rs
spotflow/src/iothub/: eventloop.rs  json_diff.rs  mod.rs  query.rs  sender.rs  token_handler.rs  topics.rs
spotflow/src/iothub/handlers/: c2d.rs  mod.rs  (+2 more)
spotflow/src/persistence/: c2d.rs  mod.rs  sqlite.rs  sqlite_channel.rs  twins.rs
spotflow/src/utils/: mod.rs  thread.rs
spotflow/tests/: c2d.rs  ingress.rs  twins.rs
(+11 files in other folders)
